<resources>
    <string name="app_name">Intent Examiner</string>
    <string name="db_name">intent_examiner.db</string>
    <string name="action_settings">Settings</string>
    <string name="intent_empty">Intent Empty</string>
    <string name="opening_greeting">Press the Button to Examine Intent</string>
    <string name="save_to_file">Save to File</string>
    <string name="save_to_file_as">Save to File As...</string>

    <string name="enterFileName">Enter file name:</string>
    <string name="saveButtonText">Save</string>
    <string name="cancelButtonText">Cancel</string>
    <string name="cannotSaveFileMessage">Cannot save file</string>
    <string name="fileNameFirstMessage">Please enter the file name first</string>
    <string name="okButtonText">OK</string>
    <string name="loadButtonText">Load</string>
    <string name="accessDenied">Access denied</string>
    <string name="missingFile">No such file</string>
    <string name="newFolderButtonText">New folder</string>
    <string name="newFolderDialogMessage">Create new folder</string>
    <string name="createButtonText">Create</string>
    <string name="folderCreationOk">Folder created sucessfully</string>
    <string name="folderCreationError">Error while creating folder</string>
    <string name="information">Information</string>
    <string name="clearLineButtonText">Clear</string>
    <string name="auto_examine">Auto Examine</string>
    <string name="auto_save">Auto Save</string>
    <string name="show_examine_button">Show Examine Button</string>
    <string name="default_file_name">IntentExamination.txt</string>
    <string name="change_default_directory">Change Default Directory</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="settings_dialog_title">Settings</string>
    <string name="reset_settings">Reset</string>
    <string name="logo_description">Application Logo</string>
    <string name="auto_log">Auto Log To Database</string>
    <string name="click_anywhere">Tapping Anywhere Examines Intent</string>
    <string name="action_export_db">Export DB</string>
    <string name="log_successful">Log Successful</string>
    <string name="save_successful">Save Successful</string>
    <string name="export_successful">Export Successful</string>
    <string name="examine_completed">Scan Completed</string>
    <string name="export_txt">Text</string>
    <string name="export_json">JSON</string>
    <string name="export_xml">XML</string>
    <string name="export_format">Export Format</string>
    <string name="mark_archived">Mark Archived On Completion</string>
    <string name="export_scope">Scope</string>
    <string name="export_full">Full DB</string>
    <string name="export_diff">Export New Entries</string>
    <string name="export_single">Export Current Only</string>
    <string name="export_local">Local</string>
    <string name="export_send">Send</string>
    <string name="export_dialog_title">Export Settings</string>
    <string name="export_destination">Destination</string>
    <string name="export_completed">Export Completed</string>
    <string name="file_temp_error">File Open Failed. See Log For Details.</string>
    <string name="unknown_field_error_explanation">A Field In The Data Could Not Be Read. This Happens With A Program Like This One. Sending This Message To The Developers Will Help Make The Next Version Better:\n\n  %1$s</string>
    <string name="unknown_field_error">Error</string>
    <string name="generic_error">Something Has Gone Wrong. See Log For Details.</string>
    <string name="filter_auto_log">Skip Logging Empty Intents</string>
    <string name="auto_log_successful">Intent Logged To Database</string>
    <string name="auto_save_successful">Intent Automatically Saved</string>
    <string name="default_file_name_hint">Default File Name</string>
</resources>
