<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:popupTheme="@style/AppTheme.PopupOverlay" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:scaleType="center"
        app:srcCompat="@drawable/ic_search_altl" />

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.ateg.intentexperiments.MainActivity"
        tools:showIn="@layout/activity_main">

        <!--<TextView-->
            <!--android:id="@+id/central_textView"-->
            <!--android:layout_width="368dp"-->
            <!--android:layout_height="551dp"-->
            <!--android:gravity="center_vertical|center_horizontal"-->
            <!--android:text="@string/opening_greeting"-->
            <!--android:isScrollContainer="true"-->
            <!--tools:layout_editor_absoluteY="8dp"-->
            <!--tools:layout_editor_absoluteX="8dp" />-->

    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>
