...
	        <LinearLayout
	            android:id="@+id/fileLinearLayout3"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	            <Button
	                android:id="@+id/fileSaveLoad"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:padding="10dp"
	                android:text="@string/saveButtonText" />
	            <Button
	                android:id="@+id/fileCancel"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:padding="10dp"
	                android:text="@string/cancelButtonText" />
	            <Button
...
